[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menus/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPlaceholder" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 550.0

[node name="LogoPlaceholder" type="ColorRect" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HighScore" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 374.0
margin_top = 396.0
margin_right = 450.0
margin_bottom = 410.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HighScore"]
margin_right = 72.0
margin_bottom = 14.0
text = "High Score:"
valign = 1

[node name="HighScore" type="Label" parent="MarginContainer/VBoxContainer/HighScore"]
margin_left = 76.0
margin_right = 76.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 334.0
margin_top = 414.0
margin_right = 489.0
margin_bottom = 434.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 10

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
text = "New Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 155.0
margin_bottom = 20.0
text = "Options"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 359.0
margin_top = 438.0
margin_right = 464.0
margin_bottom = 458.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StoryButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 44.0
margin_bottom = 20.0
text = "Story"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 48.0
margin_right = 105.0
margin_bottom = 20.0
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 371.0
margin_top = 462.0
margin_right = 453.0
margin_bottom = 482.0
size_flags_horizontal = 4
text = "Quit Game"

[node name="Copyright" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 486.0
margin_right = 824.0
margin_bottom = 500.0
text = "(c) Will Bradley and Icky 2020"
align = 1

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/StoryButton" to="." method="_on_StoryButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
